# msgspecerror

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  README_cn.md  pyproject.toml
doc/: 1-extract-source.md  2-extract-error.md  3-parsing-paths.md
msgspeccore/0.18.6/: _core.c
msgspeccore/0.19.0/: _core.c
msgspeccore/0.20.0/: _core.c
msgspeccore/0.21.0/: _core.c
msgspeccore/0.21.1/: _core.c
msgspecerror/: __init__.py  const.py  parse_anno.py  parse_ctx.py  parse_error.py  parse_model.py  parse_msgpack.py  parse_path.py  parse_struct.py  parse_type.py  repair.py  repair_unicode.py
tests/: test_anno.py  test_ctx.py  test_ctx_regex.py  test_error.py  test_error_ambiguity.py  test_error_wrapped.py  test_model.py  test_path.py  test_path_ambiguity.py  test_repair_json.py  test_repair_json_unicode.py  test_repair_msgpack.py  test_repair_msgpack_malformed.py  test_struct.py  test_struct_rename.py  test_type.py
tests/benchmark/: bench_parse_error.py  bench_repair_json.py  bench_repair_msgpack.py  perf.py
tests/realcase/: test_realcase_group_1.py  test_realcase_group_2.py  test_realcase_group_3.py  test_realcase_group_4.py  test_realcase_group_5.py  test_realcase_group_6.py
tests/repair/: test_parse_msgpack_fast.py  test_parse_msgpack_misjudgement.py  test_parse_msgpack_slow.py  test_repair_json.py  test_repair_json_deadlock.py  test_repair_json_malformed.py  test_repair_json_str.py  test_repair_json_unicode.py  test_repair_msgpack.py  test_repair_msgpack_malformed.py  test_repair_unicode.py
